# cx-core-schemas

./: README.md  pyproject.toml
src/cx_core_schemas/: api_catalog.py  connection.py  connector_script.py  notebook.py  server_schemas.py  vfs.py
src/cx_kit/contracts/: agent.py  api.py  capability.py  config.py  discovery.py  secrets.py  state.py  workflow.py
src/cx_kit/schemas/: agent.py  api_catalog.py  blueprint.py  communication.py  connection.py  context.py  discovery.py  document.py  jobs.py  project.py  results.py  server_schemas.py  vfs.py  workflow.py
src/cx_kit/toolkit/: agentic.py  observability.py  security.py  services.py
src/cx_kit/utils/: orchestration.py  serialization.py  templating.py
