[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cx-core-schemas"
version = "0.2.0"
description = "Core Pydantic data schemas and contracts for the Syncropel platform. This repository serves as the single source of truth for all shared data structures, including Blueprints, Connections, and Flows."
authors = [
    { name = "Syncropel", email = "dev@syncropel.com" },
]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0,<3.0"
]

[tool.setuptools.packages.find]
where = ["src"]
