[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cx-kit"
version = "0.3.1" # Version bumped to reflect the new SDK architecture
description = "The official SDK for the Syncropel platform. Provides core contracts, schemas, and utilities for building capabilities and integrations."
authors = [
    { name = "Syncropel", email = "dev@syncropel.com" },
]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

# These are the lightweight dependencies required by the schemas and utilities themselves.
dependencies = [
    "pydantic>=2.0,<3.0",
    "networkx>=3.0",    # For orchestration utils
    "jinja2>=3.1.0",    # For templating utils
    "structlog>=24.1.0",  # For observability toolkit
    "pyyaml>=6.0",      # For parsing yaml in various components
]

[tool.setuptools.packages.find]
where = ["src"]
